--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,10 +5,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <!-- [routerLinkActiveOptions]="{exact: true}" -->
     <ul class="navbar-nav mr-auto">
-      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-item" >
+      <li routerLinkActive="active" class="nav-item" >
         <a routerLink="home"  class="nav-link" href="#">Home</a>
       </li>
-      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-item" >
+      <li routerLinkActive="active" class="nav-item" >
         <a routerLink="/usuario/1" class="nav-link" href="#">Usuario</a>
       </li>
     </ul>
